comparison + Test cleaned and Done